# trigram

./: .formatter.exs  .gitignore  .tool-versions  CHANGELOG.md  LICENSE  PG_TRGM_TEST_EXTRACTION.md  README.md  RELEASE.md  mix.exs
.github/workflows/: ci.yml  release.yml
lib/: trigram.ex
lib/trigram/: elixir.ex  native.ex
lib/trigram/support/: similarity_cases.ex
native/trigram_nif/: Cargo.toml
native/trigram_nif/.cargo/: config.toml
native/trigram_nif/src/: lib.rs
test/: fallback_test.exs  pg_trgm_parity_test.README.md  pg_trgm_parity_test.exs  test_helper.exs  trigram_similarity_test.exs
