[package]
name = "trigram_nif"
version = "0.5.0"
authors = ["Enaia"]
edition = "2021"

[lib]
name = "trigram_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.37", default-features = false, features = ["derive"] }
once_cell = "1.19"
regex = "1.10"

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]
